--- a/views/auth/sign-in.ejs
+++ b/views/auth/sign-in.ejs
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sign Up</title>
+    <title>Sign In</title>
 </head>
 <body>
     <nav>
@@ -13,18 +13,15 @@
             </li>
         </ul>
     </nav>
-    <h1>Create A New Account</h1>
-    <form action="/auth/sign-up" method="post">
+    <h1>Sign In</h1>
+    <form action="/auth/sign-in" method="post">
         <label for="username">Username:</label>
         <input type="text" id="username" name="username">
 
         <label for="password">Password:</label>
         <input type="password" name="password" id="password">
 
-        <label for="confirmPassword">Confirm Password:</label>
-        <input type="password" name="confirmPassword" id="confirmPassword">
-
-        <button type="submit">Sign Up</button>
+        <button type="submit">Sign In</button>
     </form>
 </body>
 </html>
