--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,6 +6,21 @@
     <title>Landing Page</title>
 </head>
 <body>
-    <h1>Welcome to the App!</h1>
+    <nav>
+        <ul>
+            <li>
+                <a href="/auth/sign-up">Sign Up</a>
+            </li>
+            <li>
+                <a href="/auth/sign-in">Sign In</a>
+            </li>
+        </ul>
+    </nav>
+    <% if (user) { %>
+        <h1>Welcome to the app, <%= user.username %>!</h1>
+   <% } else { %>
+        <h1>Welcome to the app, guest.</h1>
+        <p><a href="/auth/sign-up">Sign Up</a> or  <a href="/auth/sign-in">Sign In</a> </p>
+   <%}%>
 </body>
 </html>
