--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,26 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Landing Page</title>
-</head>
-<body>
-    <nav>
-        <ul>
-            <li>
-                <a href="/auth/sign-up">Sign Up</a>
-            </li>
-            <li>
-                <a href="/auth/sign-in">Sign In</a>
-            </li>
-        </ul>
-    </nav>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Home Page</title>
+  </head>
+  <body>
     <% if (user) { %>
-        <h1>Welcome to the app, <%= user.username %>!</h1>
-   <% } else { %>
-        <h1>Welcome to the app, guest.</h1>
-        <p><a href="/auth/sign-up">Sign Up</a> or  <a href="/auth/sign-in">Sign In</a> </p>
-   <%}%>
-</body>
+    <h1>Welcome to the app, <%= user.username %>!</h1>
+    <p>
+      <a href="/auth/sign-out">Sign out</a>
+    </p>
+    <% } else { %>
+    <h1>Welcome to the app, guest.</h1>
+    <p>
+      <a href="/auth/sign-up">Sign up</a> or
+      <a href="/auth/sign-in">Sign in</a>.
+    </p>
+    <% } %>
+    <p><a href="/fruits">View the fruit menu</a></p>
+    <p><a href="/vip-lounge">Get into the VIP Users Only lounge!</a></p>
+  </body>
 </html>
